--- a/docs/hfa/peripleo.config.json
+++ b/docs/hfa/peripleo.config.json
@@ -42,28 +42,28 @@
     }
   ],
   "link_icons": [
-    { "pattern": "www.nationaltrust.org.uk", "img": "logos/www.nationaltrust.org.uk.png", "label": "National Trust" },
-    { "pattern": "www.mola.org.uk", "img": "logos/www.mola.org.uk.png", "label": "MOLA" },
-    { "pattern": "www.historicenvironment.scot", "img": "logos/www.historicenvironment.scot.png", "label": "Historic Environment Scotland" },
-    { "pattern": "www.english-heritage.org.uk", "img": "logos/www.english-heritage.org.uk.png", "label": "English Heritage" },
-    { "pattern": "www.britishmuseum.org", "img": "logos/www.britishmuseum.org.png", "label": "British Museum" },
+    { "pattern": "www.nationaltrust.org.uk", "img": "../logos/www.nationaltrust.org.uk.png", "label": "National Trust" },
+    { "pattern": "www.mola.org.uk", "img": "../logos/www.mola.org.uk.png", "label": "MOLA" },
+    { "pattern": "www.historicenvironment.scot", "img": "../logos/www.historicenvironment.scot.png", "label": "Historic Environment Scotland" },
+    { "pattern": "www.english-heritage.org.uk", "img": "../logos/www.english-heritage.org.uk.png", "label": "English Heritage" },
+    { "pattern": "www.britishmuseum.org", "img": "../logos/www.britishmuseum.org.png", "label": "British Museum" },
     { "pattern": "www.flickr.com", "img": "../logos/www.bl.uk.png", "label": "Flickr" },
-    { "pattern": "www.bl.uk", "img": "logos/www.bl.uk.png", "label": "British Library" },
-    { "pattern": "access.bl.uk", "img": "logos/www.bl.uk.png", "label": "British Library" },
-    { "pattern": "sounds.bl.uk", "img": "logos/www.bl.uk.png", "label": "British Library" },
-    { "pattern": "britishlibrary.georeferencer.com", "img": "logos/www.bl.uk.png", "label": "British Library" },
-    { "pattern": "hrp.org.uk", "img": "logos/hrp.org.uk.png", "label": "Historic Royal Palaces" },
-    { "pattern": "historicengland.org.uk", "img": "logos/historicengland.org.uk.png", "label": "Historic England" },
-    { "pattern": "finds.org.uk", "img": "logos/finds.org.uk.png", "label": "Portable Antiquities Scheme" },
-    { "pattern": "cadw.gov.wales", "img": "logos/cadw.gov.wales.png", "label": "CADW" },
+    { "pattern": "www.bl.uk", "img": "../logos/www.bl.uk.png", "label": "British Library" },
+    { "pattern": "access.bl.uk", "img": "../logos/www.bl.uk.png", "label": "British Library" },
+    { "pattern": "sounds.bl.uk", "img": "../logos/www.bl.uk.png", "label": "British Library" },
+    { "pattern": "britishlibrary.georeferencer.com", "img": "../logos/www.bl.uk.png", "label": "British Library" },
+    { "pattern": "hrp.org.uk", "img": "../logos/hrp.org.uk.png", "label": "Historic Royal Palaces" },
+    { "pattern": "historicengland.org.uk", "img": "../logos/historicengland.org.uk.png", "label": "Historic England" },
+    { "pattern": "finds.org.uk", "img": "../logos/finds.org.uk.png", "label": "Portable Antiquities Scheme" },
+    { "pattern": "cadw.gov.wales", "img": "../logos/cadw.gov.wales.png", "label": "CADW" },
     { "pattern": "cadwpublic-api.azurewebsites.net", "img": "../logos/cadw.gov.wales.png", "label": "CADW" },
-    { "pattern": "www.geograph.org.uk", "img": "logos/geograph.org.png", "label": "Geograph" },
-    { "pattern": "w3id.org", "img": "logos/w3id.org.png", "label": "W3ID" },
-    { "pattern": "openplaques.org", "img": "logos/openplaques.png", "label": "Open Plaques" },
-    { "pattern": "artuk.org", "img": "logos/ArtUK.org.png", "label": "Art UK" }, 
-    { "pattern": "en.wikipedia.org", "img": "logos/en.wikipedia.org.png", "label": "Wikipedia" },
-    { "pattern": "www.pastplace.org", "img": "logos/broken-link.png", "label": "PastPlace" },
-    { "pattern": "www.geonames.org", "img": "logos/www.geonames.org.svg", "label": "GeoNames" },
-    { "pattern": "www.wikidata.org", "img": "logos/www.wikidata.org.svg", "label": "Wikidata" }
+    { "pattern": "www.geograph.org.uk", "img": "../logos/geograph.org.png", "label": "Geograph" },
+    { "pattern": "w3id.org", "img": "../logos/w3id.org.png", "label": "W3ID" },
+    { "pattern": "openplaques.org", "img": "../logos/openplaques.png", "label": "Open Plaques" },
+    { "pattern": "artuk.org", "img": "../logos/ArtUK.org.png", "label": "Art UK" }, 
+    { "pattern": "en.wikipedia.org", "img": "../logos/en.wikipedia.org.png", "label": "Wikipedia" },
+    { "pattern": "www.pastplace.org", "img": "../logos/broken-link.png", "label": "PastPlace" },
+    { "pattern": "www.geonames.org", "img": "../logos/www.geonames.org.svg", "label": "GeoNames" },
+    { "pattern": "www.wikidata.org", "img": "../logos/www.wikidata.org.svg", "label": "Wikidata" }
   ]
 }
