--- a/docs/leifuss/peripleo.config.json
+++ b/docs/leifuss/peripleo.config.json
@@ -37,7 +37,7 @@
       "name": "MonasteryQuest",
       "format": "LINKED_PLACES",
       "src": "../data/MonasteryQuest.lp.json",
-      "attribution": "<a href=\"https://stainedglassattitudes.wordpress.com/2020/11/30/monasteryquest-pt-3-the-map/\" target=\"_blank\">MonasteryQuest™</a> © Dr J.A. Cameron"
+      "attribution": "<i><a href=\"https://stainedglassattitudes.wordpress.com/2020/11/30/monasteryquest-pt-3-the-map/\" target=\"_blank\">MonasteryQuest™</a></i> © Dr J.A. Cameron"
     }
   ],
   "facets": [
@@ -49,7 +49,7 @@
       "type": "geojson",
       "src": "../layers/inland_navigation_1348.geojson",
       "color": "#5555ff",
-      "attribution": "<a href=\"https://doi.org/10.5284/1057497\" target=\"_blank\">Inland Navigation in England and Wales before 1348</a> © Eljas Oksanen (2019)"
+      "attribution": "<i><a href=\"https://doi.org/10.5284/1057497\" target=\"_blank\">Inland Navigation in England and Wales before 1348</a></i> © Eljas Oksanen (2019)"
     },
     {
       "name": "SW Routes",
