--- a/docs/peripleo.config.json
+++ b/docs/peripleo.config.json
@@ -1,5 +1,6 @@
 {
   "initial_bounds": [-7.9, 49.5, 2.2, 59.4],
+	"ga_id": "G-2HSSF48HYH",
   "map_style": "https://api.maptiler.com/maps/outdoor/style.json?key=cqqmcLw28krG9Fl7V3kg",
   "data": [
     { "name": "Portable Antiquities Scheme", "format": "LINKED_PLACES", "src": "data/PAS_Warwickshire.lp.json", "logo": "logos/finds.org.uk.png", "attribution":"Findspot Data © <a href=\"https://finds.org.uk/\" target=\"_blank\">Portable Antiquities Scheme</a>" },
