--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-image-lightbox": "^5.1.4",
     "react-joyride": "^2.4.0",
     "react-map-gl": "^7.0.6",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^6.2.1",
     "react-transition-group": "^4.4.2",
     "recoil": "^0.6.1",
